fix overflow

--- a/front/src/feature/home/Home.css
+++ b/front/src/feature/home/Home.css
@@ -30,7 +30,6 @@
 .dailyEdt, .overlay {
   display: grid;
   grid-template-rows: repeat(12, minmax(13px, 1fr));
-  overflow-y: scroll;
 }
 
 .void {
